# FRep-Designer-Bench

./: .gitignore  README.md  run_all.sh
common/: energy.hpp  fetch.sh  field_dump.hpp  timing.hpp
frep4/: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  RELEASE_NOTES.md  VENDORED.md
frep4/.github/workflows/: ci.yml
frep4/core/accel/: bvh.hpp  guard_calibration.cpp  guard_calibration.hpp
frep4/core/ad/: forward_ad.hpp
frep4/core/compiler/: bvh.hpp  codegen.cpp  codegen.hpp  compile_mode_policy.hpp  compile_policy.hpp  compile_sdf.hpp  incremental.hpp  incremental_params.hpp  jit_engine.hpp  llvm_compat.hpp  node_interval.hpp  node_interval_ir.hpp  param_binding_table.hpp  picker.hpp  retarget_nvptx.hpp  retarget_spirv.hpp  scene_bindings.hpp  sdf_validate.hpp  spirv_external.hpp
frep4/core/exec/: bench_scenes.hpp  cpu_executor.hpp  executor_factory.cpp  executor_factory.hpp  gpu_executor.hpp  gpu_ir_executor.hpp  multipath.cpp  multipath.hpp  parity_scenes.hpp  remote_executor.hpp  rtx_executor.hpp
frep4/core/frep/: aabb.cpp  ad_ir.hpp  custom_expr.cpp  custom_expr.hpp  deformations.hpp  deformations_ad.cpp  expr_ast.cpp  expr_ast.hpp  instance.hpp  mesh_sdf.cpp  mesh_sdf.hpp  node.cpp  node.hpp  operations.hpp  operations_ad.cpp  primitives.hpp  primitives_ad.cpp  scene.cpp  scene.hpp  smart_import.hpp  template_fn.cpp  template_fn.hpp  transforms.hpp
frep4/core/gpu/: cuda_ctx.cpp  cuda_ctx.hpp  glsl_compile.hpp  glsl_emitter.cpp  glsl_emitter.hpp  glsl_interval.hpp  glsl_node_interval.hpp  opencl_ctx.cpp  opencl_ctx.hpp  rtx_accel.cpp  rtx_accel.hpp  rtx_caps.cpp  rtx_caps.hpp  rtx_csg_groups.cpp  rtx_csg_groups.hpp  rtx_ctx.cpp  rtx_ctx.hpp  rtx_pipeline.cpp  rtx_pipeline.hpp  rtx_query.cpp  rtx_query.hpp  rtx_shaders.cpp  rtx_shaders.hpp  shader_push_builder.hpp  vulkan_ctx.cpp  vulkan_ctx.hpp
frep4/core/io/: bmp_loader.hpp  json.hpp  png_loader.hpp  scene_io.cpp  scene_io.hpp
frep4/core/mesh/: marching_cubes.cpp  marching_cubes.hpp  marching_cubes_tables.cpp  sparse_sdf_octree.hpp  triangle_bvh.hpp
frep4/core/plugin/: plugin_api.hpp  plugin_loader.hpp
frep4/core/postprocess/: post_process.hpp
frep4/core/power/: energy_meter.cpp  energy_meter.hpp
frep4/core/render/: cpu_trace.hpp
frep4/core/tracer/: tile_scheduler.hpp
frep4/core/undo/: undo_stack.hpp
frep4/docs/: ARCHITECTURE.md  ARCHITECTURE_PATHS.md  BENCHMARKS.md  DISTRIBUTED.md  FEATURE_MATRIX.md  GALLERY.md  MULTIPATH.md  PERFORMANCE.md  PERFORMANCE_TUNING.md  PLUGIN_AUTHORING.md  RTX_VALIDATION.md  TUTORIAL.md  UNIFIED_PARAM_PLACEMENT.md  USER_GUIDE.md
frep4/examples/: 01_csg_basic.json  02_twisted_column.json  03_smooth_union_blob.json  04_patterned_spheres.json  05_carved_sphere.json  06_textured_objects.json  README.md  benchmark_heavy_csg_48.json  benchmark_heavy_twist_125.json  benchmark_heavy_twist_27.json  benchmark_heavy_twist_64.json  benchmark_mixed_48.json  benchmark_simple_boxes_64.json  benchmark_simple_spheres_125.json  benchmark_simple_spheres_27.json
frep4/gpu/: sphere_trace.comp
frep4/gui/: camera_control_config.hpp  checkable_combo_box.cpp  checkable_combo_box.hpp  dist_viewport.cpp  dist_viewport.hpp  dist_viewport_paint.inc  executor_viewport.cpp  executor_viewport.hpp  expression_editor.cpp  expression_editor.hpp  frep_vulkan_window.hpp  iviewport.cpp  iviewport.hpp  main.cpp  main_window.cpp  main_window.hpp  material_editor.cpp  material_editor.hpp  node_graph.cpp  node_graph.hpp  node_types.cpp  node_types.hpp  offscreen_viewport_adapter.cpp  offscreen_viewport_adapter.hpp  scene_inspector.cpp  scene_inspector.hpp  viewport.cpp  viewport.hpp  vulkan_viewport.cpp  vulkan_viewport.hpp
frep4/plugins/: extra_primitives.hpp
frep4/plugins/dynamic/: capsule_plugin.cpp
frep4/tests/: test_clone_node.cpp  test_codegen.cpp  test_codegen_texture_fallback.cpp  test_compile_policy.cpp  test_custom_expr_eval.cpp  test_deformations_patterns.cpp  test_dist_render.cpp  test_dist_transport.cpp  test_energy.cpp  test_expr_backends.cpp  test_glsl_emitter.cpp  test_gpu_patterns_mesh.cpp  test_gpu_shadow_regression.cpp  test_guard_calibration.cpp  test_incremental.cpp  test_interval_enclosure.cpp  test_mesh.cpp  test_mesh_sdf.cpp  test_mixed_nodes_integration.cpp  test_multipath.cpp  test_node_graph.cpp  test_nodes.cpp  test_nvptx.cpp  test_path_parity.cpp  test_phase4.cpp  test_plugin_glsl.cpp  test_plugin_runtime.cpp  test_post_process.cpp  test_reflections_soft_shadows.cpp  test_rtx_path.cpp  test_scene_bvh.cpp  test_scene_io_relative_textures.cpp  test_scene_set_geometry.cpp  test_sdf_invariant.cpp  test_sparse_sdf.cpp  test_spirv.cpp  test_support.hpp  test_textures.cpp  test_transform_gizmo.cpp  test_triangle_bvh.cpp  (+2 more)
frep4/tests/standalone/: test_placement_poc.cpp
frep4/tools/: bench_tile_cull.cpp  bench_trace.cpp  benchmarks.cpp  diag_handwritten.cpp  diag_horizon.cpp  diag_horizon_scene.cpp  diag_shadow.cpp  dist_render.cpp  dump_artifacts.cpp  gallery.cpp  gen_benchmark_scenes.cpp  gpu_cull_bench.cpp  multipath_driver.cpp  parity_check.cpp  perf_baseline.json  perf_check.py  render_advanced.cpp  render_ppm.cpp  repro_cpu_ir_black.cpp  rtx_bench.cpp  rtx_probe.cpp  validate_runtime_params.cpp
frep4_bench/: CMakeLists.txt  bench_grid.cpp  bench_render.cpp  build.sh  gen_scenes.cpp  pathcost.cpp  rq_bench.cpp  run.sh  tmpl_check.cpp
frep4_bench/patches/: 0001-bench-support.patch  0001-llvm22-getorinsertdeclaration.patch  0002-nth-root-all-backends.patch  0003-nvptx-lower-pow-exp-log.patch  0004-adaptive-simd-width.patch  0005-vector-render-stage1.patch  0006-templates-rtx-groups-smart-import.patch  compile_sdf.hpp.add  core_compiler_sdf_validate_hpp.add  core_frep_smart_import_hpp.add  core_frep_template_fn_cpp.add  core_frep_template_fn_hpp.add
hyperfun_bench/: CMakeLists.txt  bench_hf.cpp  build.sh  run.sh
hyperfun_bench/patches/: 0001-build-fixes.patch
libfive_bench/: CMakeLists.txt  bench_libfive.cpp  build.sh  run.sh  scenes_trees.hpp
libfive_bench/patches/: 0001-interval-pow-int-min-guard.patch
mpr_bench/: RUN.md  build.sh  (+2 more)
(+64 files in other folders)
