cmake_minimum_required(VERSION 3.16)
project(hf_bench C CXX)
set(CMAKE_CXX_STANDARD 17)
if(NOT DEFINED HFP_DIR)
  set(HFP_DIR ${CMAKE_SOURCE_DIR}/../hyperfun/hyperfun_source/hfp)
endif()
set(HF ${HFP_DIR})
file(GLOB HF_C ${HF}/interpreter_lib/*.c ${HF}/hflibrary_lib/*.c)
add_executable(bench_hf bench_hf.cpp ${HF}/cppinterpreter_lib/hfinterpreter.cpp ${HF_C})
target_include_directories(bench_hf PRIVATE ${HF}/cppinterpreter_lib ${HF}/interpreter_lib ${HF}/hflibrary_lib)
target_compile_options(bench_hf PRIVATE -O2 -w -fcommon)
target_link_options(bench_hf PRIVATE -Wl,--allow-multiple-definition)
